# llm-zoomcamp

cohorts/2024/01-intro/: answers.ipynb  pyproject.toml
cohorts/2024/02-open-source/: answers.md
cohorts/2024/03-vector-search/: homework.md  pyproject.toml
cohorts/2024/04-monitoring/: homework.md
cohorts/2024/05-orchestration/: homework.md
