[tool.poetry]
name = "01-intro"
version = "0.1.0"
description = ""
authors = [" <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
requests = "^2.32.3"
elasticsearch = "^8.14.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
